# teacherlm

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  README.md  generators_registry.json  presentation.tex  pytest.ini  repport.tex  run.sh  teacherlm-architecture-flow-split.md  teacherlm-class-diagram-a4-3part.md  teacherlm-class-diagram-split.md
.claude/: settings.local.json
.github/workflows/: pages.yml  windows-release.yml
docs/project-parts/: 00-index.md  01-root-operations.md  02-shared-core.md  03-platform-backend.md  04-data-retrieval-learning.md  05-platform-frontend.md  06-generator-services.md  07-tests-evaluations-reports.md
generators/: README.md
generators/flashcard_gen/: CLAUDE.md  Dockerfile  README.md  app.py  (+4 more)
local_teacherlm/: README.md  THIRD_PARTY_NOTICES.md  generators_registry.json  run.sh  start_teacherlm.cmd
local_teacherlm/python/teacherlm_core/: README.md  pyproject.toml
local_teacherlm/python/teacherlm_core/teacherlm_core/: __init__.py
local_teacherlm/python/teacherlm_core/teacherlm_core/llm/: __init__.py  providers.py
local_teacherlm/python/teacherlm_core/teacherlm_core/prompts/: teacher_voice.txt
local_teacherlm/python/teacherlm_core/teacherlm_core/retrieval/: __init__.py  bm25.py  hyde.py  reranker.py  rrf.py
local_teacherlm/python/teacherlm_core/teacherlm_core/schemas/: __init__.py  chunk.py  generator_io.py  learner_state.py  manifest.py
local_teacherlm/rust/tauri_shell/: Cargo.toml  tauri.conf.json
local_teacherlm/rust/tauri_shell/capabilities/: default.json
local_teacherlm/rust/tauri_shell/icons/: icon.icns
local_teacherlm/rust/tauri_shell/resources/ollama/: .gitkeep
local_teacherlm/rust/tauri_shell/src/: main.rs
platform/: .env  .env.example  README.md  docker-compose.yml
website/: index.html  site.js  styles.css
(+372 files in other folders)
