[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "teacherlm_core"
version = "0.2.0"
description = "Local-first shared TeacherLM contracts, retrieval helpers, and LLM routing."
readme = "README.md"
requires-python = ">=3.14"
license = { text = "Proprietary" }
authors = [{ name = "TeacherLM" }]
dependencies = [
    "pydantic>=2.12",
    "ollama>=0.4",
    "openai>=1.55",
    "anthropic>=0.39",
    "httpx>=0.28",
    "rank-bm25>=0.2.2",
    "fastembed>=0.4",
    "numpy>=2.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "ruff>=0.8",
]

[tool.hatch.build.targets.wheel]
packages = ["teacherlm_core"]

