[package]
name = "teacherlm_tauri_shell"
version = "0.1.0"
description = "Tauri shell for Local TeacherLM"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
tauri = { version = "2", features = [] }

